<resources>
    <string name="app_name">Reminder Application</string>

    <string name="title_categories">Categories</string>
    <string name="title_categories_management">Categories management</string>
    <string name="title_settings">Settings</string>
    <string name="title_info">Info</string>
    <string name="title_exit">Exit</string>

    <string-array name="default_categories">
        <item>By Default</item>
        <item>Personal</item>
        <item>Family</item>
        <item>Work</item>
    </string-array>

    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="title_reminder_menu">Menu</string>

    <string name="title_all_categories">All</string>
    <string name="title_search">Search</string>
    <string name="title_edit">Edit</string>
    <string name="title_delete">Delete</string>
    <string name="title_category_name">Category name</string>
    <string name="title_reminders_number">Reminders number</string>
    <string name="description_edit_options">Edit options</string>
    <string name="category_drag_handler">Category drag handler</string>
    <string name="description_add_category_button">Add Category Button</string>
    <string name="hint_search_category">Search Category</string>
    <string name="description_back_button">Back button</string>
    <string name="description_edit_button">Edit Button</string>
    <string name="description_delete_button">Delete Button</string>
    <string name="title_category_editing">Category Editing</string>
    <string name="title_create_category">Create Category</string>
    <string name="hint_category_name">Category name…</string>

    <string name="title_cancel">Cancel</string>
    <string name="title_ok">OK</string>
    <string name="title_grid_view">Grid View</string>
    <string name="title_choose_color">Choose Color</string>
    <string name="description_check_for_color">Check for color</string>
    <string name="error_category_exists">This category already exists!</string>
    <string name="error_empty_category_name">Category name is empty!</string>
    <string name="text_no_reminders">No reminders</string>
    <string name="title_sort_categories">Sort Categories</string>
    <string name="title_default_order">Default Order</string>
    <string name="title_name_ascending">Name Ascending</string>
    <string name="title_name_descending">Name Descending</string>
    <string name="description_add_reminder_button">Add Reminder</string>
    <string name="reminder_title">Reminder title</string>
    <string name="title_categories_editing">Categories Editing</string>
    <string name="title_add_reminder">Add Reminder</string>
    <string name="title_add_alarm">Add Alarm</string>
    <string name="title_reminder_description">Reminder Description</string>
    <string name="hint_add_description">Add description</string>
    <string name="title_reminder_resume">Reminder Resume:</string>
    <string name="title_add_to_category">Add to category</string>
    <string name="title_search_for_category">Search for category…</string>
    <string name="category_name_all">All</string>
    <string name="category_name_by_default">By Default</string>
    <string name="title_time_and_date">Time and Date:</string>
    <string name="no_time">No Time</string>
    <string name="remove_time_date">Remove time and date</string>
    <string name="zero_time">00:00</string>
    <string name="remove_time">Remove time</string>
    <string name="zero_date">Thu, 1 Jan 1970</string>
    <string name="tomorrow">Tomorrow</string>

    <string name="repeat">Repeat:</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="stop_repeating">Stop repeating:</string>
    <string name="no_end_time_date">No end time/date</string>
    <string name="selected_time_has_already_passed">Selected time has already passed</string>
    <string name="description_notification_icon">Notification icon</string>

    <string name="error_reminder_exists">Reminder with this title already exists!</string>
    <string name="error_empty_reminder_title">Reminder title is empty!</string>
    <string name="description_app_icon">App icon</string>
    <string name="title_filter_reminders">Filter Reminders</string>
    <string name="title_sort_reminders">Sort Reminders</string>
    <string name="description_repeat_icon">Repeat icon</string>
    <string name="every">Every:</string>
    <string name="sample_chosen_repeat_time">1 day</string>
    <string name="description_edit">Edit</string>
    <string name="sample_next_time_repeat">Next time: 00:00 • Thu, 1 Jan 1970 • Tomorrow</string>
    <string name="zero">0</string>
    <string name="title_title_ascending">Title Ascending</string>
    <string name="title_title_descending">Title Descending</string>
    <string name="title_most_recently_updated">Most Recently Updated</string>
    <string name="title_least_recently_updated">Least Recently Updated</string>
    <string name="description_help_button">Help button</string>

    <string-array name="repeat_types">
        <item>periodic</item>
        <item>weekly</item>
    </string-array>

    <string-array name="repeat_patterns">
        <item>minute</item>
        <item>hour</item>
        <item>day</item>
        <item>week</item>
        <item>month</item>
        <item>year</item>
    </string-array>

</resources>