<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        app:iconTint="@color/lavender_dark"
        android:title="@string/title_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/view_mode"
        android:icon="@drawable/ic_grid_view"
        app:iconTint="@color/lavender_dark"
        android:title="@string/title_grid_view"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/reminder_sorting"
        android:icon="@drawable/ic_sort"
        app:iconTint="@color/lavender_dark"
        android:title="@string/title_sort_reminders"
        app:showAsAction="ifRoom">

        <menu>
            <group android:id="@+id/sorting_group">

                <item
                    android:id="@+id/sort_default"
                    android:icon="@drawable/ic_sort"
                    app:iconTint="@color/lavender_dark"
                    android:title="@string/title_default_order"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/sort_title_asc"
                    android:icon="@drawable/ic_sort_az"
                    app:iconTint="@color/lavender_dark"
                    android:title="@string/title_title_ascending"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/sort_title_desc"
                    android:icon="@drawable/ic_sort_za"
                    app:iconTint="@color/lavender_dark"
                    android:title="@string/title_title_descending"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/sort_updated_time_asc"
                    android:icon="@drawable/ic_time"
                    app:iconTint="@color/lavender_dark"
                    android:title="@string/title_most_recently_updated"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/sort_updated_time_desc"
                    android:icon="@drawable/ic_time_restore"
                    app:iconTint="@color/lavender_dark"
                    android:title="@string/title_least_recently_updated"
                    app:showAsAction="never" />

            </group>
        </menu>

    </item>

</menu>