<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/reminder_card_view"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    android:layout_margin="8dp"
    style="@style/CardView.Background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/is_completed_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomCheckBoxStyle" />

            <TextView
                android:id="@+id/reminder_name_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:padding="8dp"
                android:text="@string/reminder_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/reminder_card_view_options"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_gravity="center"
                android:background="@drawable/ic_more_vert"
                android:backgroundTint="@color/gray"
                android:contentDescription="@string/description_edit_options"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/notification_time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/notification_icon_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/description_notification_icon"
                android:src="@drawable/ic_notification_outlined" />

            <TextView
                android:id="@+id/how_many_time_difference_text_view_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8sp"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/tomorrow"
                android:textColor="@color/gray"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>