<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/choose_time_date_dialog_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_corner"
    tools:context=".ChooseTimeDateDialogFragment">

    <FrameLayout
        android:id="@+id/frame_picker_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/switch_layout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24sp"
        android:layout_marginEnd="24sp"
        android:layout_below="@+id/frame_picker_container"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/switch_time_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_time"
            android:textSize="12sp"
            android:textColor="@color/lavender_dark" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_time_optional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:elevation="20dp"
            android:padding="10dp"
            app:thumbTint="@color/switch_thumb_color"
            app:trackTint="@color/switch_track_color" />

        <RadioGroup
            android:id="@+id/time_date_group_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomRadioButtonStyle"
                android:drawableTop="@drawable/ic_time" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomRadioButtonStyle"
                android:drawableTop="@drawable/ic_calendar"
                android:buttonTint="@android:color/transparent"
                android:checked="true" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:layout_marginBottom="8sp"
        android:layout_marginStart="24sp"
        android:layout_marginEnd="24sp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/switch_layout"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_date_time_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lavender_dark"
            android:layout_marginEnd="10sp"
            android:text="@string/title_cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ok_date_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/lavender_dark"
            android:text="@string/title_ok" />

    </LinearLayout>

</RelativeLayout>